--- a/window/window-size.html
+++ b/window/window-size.html
@@ -7,15 +7,34 @@
     <title>window-size</title>
     <style>
       .window-background {
-        background-color: wheat;
+        background-color: pink;
         font-size: 2em;
-
         padding: 10px;
       }
     </style>
   </head>
   <body>
     <div class="window-background">window-size</div>
-    <script defer src="window.js"></script>
+    <script>
+      const windowSize = document.querySelector(".window-background");
+
+      // 중복 코드 함수 처리
+      function updateHtml() {
+        windowSize.innerHTML = `
+        window.screen.size: ${window.screen.width}, ${window.screen.height}</br>
+        window.inner.size: ${window.innerWidth}, ${window.innerHeight}</br>
+        window.outer.size: ${window.outerWidth}, ${window.outerWidth}</br>
+        documentElement.clientWidth: ${document.documentElement.clientWidth}, ${document.documentElement.clientHeight}
+      `;
+      }
+
+      // 윈도우의 resize 사이즈가 변경될 때마다 -> HTML 변경
+      window.addEventListener("resize", () => {
+        updateHtml();
+      });
+      // 사이즈가 변경되기 전 기본 값
+      updateHtml();
+    </script>
+    <!-- <script defer src="window.js"></script> -->
   </body>
 </html>
