--- a/coordinates/index.html
+++ b/coordinates/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coordinates</title>
+    <!-- 좌표를 찾아라 실습 -->
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- 수평 선 horizontal -->
+    <div class="line horizontal-line"></div>
+    <!-- 수직 선 vertical-->
+    <div class="line vertical-line"></div>
+    <!-- 좌표 -->
+    <!-- <div class="target" src="img/logo.png"></div> -->
+    <img class="target" src="img/target.png" />
+    <!--좌표값-->
+    <div class="coordinates_value">좌표값</div>
+  </body>
 </html>
