Update : HTML 값 실시간 변경하기
html 특정 태그의 값(좌표위치)을 실시간 좌표 위치(마우스 이동 위치)로 변경해준다.

--- a/coordinates/index.html
+++ b/coordinates/index.html
@@ -17,6 +17,6 @@
     <!-- <div class="target" src="img/logo.png"></div> -->
     <img class="target" src="img/target.png" />
     <!--좌표값-->
-    <div class="coordinates_value">좌표값</div>
+    <div class="coordinates_value">_ px, _ px</div>
   </body>
 </html>
