Update : html 기본 구조 잡기
토끼를 찾아라 html 기본 구조 잡기

--- a/rabbits/index.html
+++ b/rabbits/index.html
@@ -3,10 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll</title>
+    <title>Scrolling Find a Rabbit!</title>
+    <!--* 토끼를 찾아라 실슴
+      * 버튼 누를경우 토끼의 위치를 찾아 스크롤링 되어 찾는 기능생성하기
+      -->
     <style></style>
   </head>
   <body>
-    <script></script>
+    <section id="main">
+      <button id="find-btn">Find a Rabbit</button>
+      <section>
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <!-- 버튼을 누르면 찾아야하는 토끼 -->
+        <img id="rabbit" src="img/rabbit.png" alt="토끼" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+        <img src="img/carrot.png" alt="당근" />
+      </section>
+    </section>
   </body>
 </html>
