Add : css 배치 및 스타일 주기
Add : css 배치 및 스타일 주기

--- a/rabbits/index.html
+++ b/rabbits/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrolling Find a Rabbit!</title>
+    <link rel="stylesheet" href="style.css" />
     <!--* 토끼를 찾아라 실슴
       * 버튼 누를경우 토끼의 위치를 찾아 스크롤링 되어 찾는 기능생성하기
       -->
-    <style></style>
   </head>
   <body>
-    <section id="main">
+    <section id="container">
       <button id="find-btn">Find a Rabbit</button>
-      <section>
+      <section id="main">
         <img src="img/carrot.png" alt="당근" />
         <img src="img/carrot.png" alt="당근" />
         <img src="img/carrot.png" alt="당근" />
