Update : html js 연결

--- a/rabbits/index.html
+++ b/rabbits/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrolling Find a Rabbit!</title>
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <!--* 토끼를 찾아라 실슴
       * 버튼 누를경우 토끼의 위치를 찾아 스크롤링 되어 찾는 기능생성하기
