--- a/dom code/dom.html
+++ b/dom code/dom.html
@@ -47,6 +47,10 @@
       const h3 = document.querySelector("h3");
       section.insertBefore(h2, h3);
       // section.appendChild(h2);
+      // section.removeChild(h2);
+      section.innerHTML = `
+    <img src="img/avatar.png" alt="avatar" />
+      <h1 id="brand">Dream Coding</h1>`;
     </script>
   </body>
 </html>
