Update : html 쇼핑몰 기본구조셋팅

--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- <FontAwesomeIcon icon="fa-solid fa-plus" /> -->
 
 <html lang="en">
   <head>
@@ -8,20 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/56b60620d6.js" crossorigin="anonymous"></script>
+    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
     <title>shoppingList</title>
   </head>
-  <body>
+  <body class="main-container">
     <section class="container">
       <header class="header">ShoppingList</header>
       <ul class="item-list">
-        <li class="item">ssssitme</li>
+        <li class="item">츄르츄르</li>
       </ul>
-      <input type="text" class="text" />
+      <input type="text" class="text" placeholder=" Enter the product to add." />
       <footer class="footer">
-        <!-- <i class="fa-solid fa-plus"></i> -->
-        <FontAwesomeIcon icon="faSolid faPlus" />
+        <FontAwesomeIcon icon="{faPlus}" size="2x" />
       </footer>
     </section>
   </body>
 </html>
-`
