--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -19,7 +19,7 @@
       </ul>
       <input type="text" class="text" placeholder=" Enter the product to add." />
       <footer class="footer">
-        <FontAwesomeIcon icon="{faPlus}" size="2x" />
+        <i class="fas fa-plus-square"></i>
       </footer>
     </section>
   </body>
