Revert "Update index.html"
This reverts commit c031c6a314631c9f4c4386e6644f67255e21d104.

--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -19,7 +19,7 @@
       </ul>
       <input type="text" class="text" placeholder=" Enter the product to add." />
       <footer class="footer">
-        <i class="fas fa-plus-square"></i>
+        <FontAwesomeIcon icon="{faPlus}" size="2x" />
       </footer>
     </section>
   </body>
