--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -15,7 +15,12 @@
     <section class="container">
       <header class="header">ShoppingList</header>
       <ul class="item-list">
-        <li class="item">츄르츄르</li>
+        <li class="item">
+          츄르츄르
+          <span>
+            <i class="fas fa-trash-alt"></i>
+          </span>
+        </li>
       </ul>
       <input type="text" class="text" placeholder=" Enter the product to add." />
       <footer class="footer">
