Update : CSS 세부 추가

--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -17,14 +17,17 @@
       <ul class="item-list">
         <li class="item">
           츄르츄르
-          <span>
+          <button class="item-delete">
             <i class="fas fa-trash-alt"></i>
-          </span>
+          </button>
         </li>
+        <div class="item-divider"></div>
       </ul>
       <input type="text" class="text" placeholder=" Enter the product to add." />
       <footer class="footer">
-        <i class="fas fa-plus-square"></i>
+        <button class="item-add">
+          <i class="fas fa-plus-square"></i>
+        </button>
       </footer>
     </section>
   </body>
