--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -14,12 +14,17 @@
   <body class="main-container">
     <section class="container">
       <header class="header">ShoppingList</header>
+      <!-- item 목록 -->
       <ul class="item-list">
-        <li class="item">
-          츄르츄르
-          <button class="item-delete">
-            <i class="fas fa-trash-alt"></i>
-          </button>
+        <!-- item 1줄 칸  -->
+        <li class="item-row">
+          <!-- item 요소 -->
+          <div class="item">
+            <span class="item-name"> 츄르츄르</span>
+            <button class="item-delete">
+              <i class="fas fa-trash-alt"></i>
+            </button>
+          </div>
         </li>
         <div class="item-divider"></div>
       </ul>
