--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -17,15 +17,14 @@
       <!-- item 목록 -->
       <ul class="item-list">
         <!-- item 1줄 칸  -->
-        <li class="item-row">
-          <!-- item 요소 -->
-          <div class="item">
+        <!-- <li class="item-row">
+           <div class="item">
             <span class="item-name"> 츄르츄르</span>
             <button class="item-delete">
               <i class="fas fa-trash-alt"></i>
             </button>
           </div>
-        </li>
+        </li> -->
         <div class="item-divider"></div>
       </ul>
       <input type="text" class="text" placeholder=" Enter the product to add." />
