--- a/Bubling_Capturing/event-capture.html
+++ b/Bubling_Capturing/event-capture.html
@@ -38,10 +38,19 @@
       const middle = document.querySelector(".middle");
       const button = document.querySelector("button");
 
+      // 실행되길 원하는 요소만 실행되도록  조건거는 방법
       outer.addEventListener("click", (event) => {
+        // 실행하는 요소가 현재 요소가 아닐경우 실행 하지 않는 조건 넣기
+        // -> 버튼 이벤트만 실행된다.
+        if (event.target !== event.currentTarget) {
+          return;
+        }
         console.log(`outer: ${event.currentTarget}, ${event.target}`);
       });
       middle.addEventListener("click", (event) => {
+        if (event.target !== event.currentTarget) {
+          return;
+        }
         console.log(`middle ${event.currentTarget}, ${event.target}`);
       });
       button.addEventListener("click", (event) => {
