--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -15,18 +15,7 @@
     <section class="container">
       <header class="header">ShoppingList</header>
       <!-- item 목록 -->
-      <ul class="item-list">
-        <!-- item 1줄 칸  -->
-        <!-- <li class="item-row">
-           <div class="item">
-            <span class="item-name"> 츄르츄르</span>
-            <button class="item-delete">
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </div>
-        </li> -->
-        <div class="item-divider"></div>
-      </ul>
+      <ul class="item-list"></ul>
       <input type="text" class="text" placeholder=" Enter the product to add." />
       <footer class="footer">
         <button class="item-add">
