--- a/Bubling_Capturing/event-delegation.html
+++ b/Bubling_Capturing/event-delegation.html
@@ -25,18 +25,18 @@
     </ul>
     <script>
       // Bad
-      // const lis = document.querySelectorAll('li');
-      // lis.forEach(li => {
-      //   li.addEventListener('click', () => {
-      //     li.classList.add('selected');
+      // const lis = document.querySelectorAll("li");
+      // lis.forEach((li) => {
+      //   li.addEventListener("click", () => {
+      //     li.classList.add("selected");
       //   });
       // });
 
-      // Coooooooool 🙌
-      const ul = document.querySelector('ul');
-      ul.addEventListener('click', event => {
-        if (event.target.tagName == 'LI') {
-          event.target.classList.add('selected');
+      // Good
+      const ul = document.querySelector("ul");
+      ul.addEventListener("click", (event) => {
+        if (event.target.tagName == "LI") {
+          event.target.classList.add("selected");
         }
       });
     </script>
