Update : FORM 활용하기 : 추가 기능 리팩토링
FORM 활용하기 : 추가 기능 리팩토링

--- a/shoppinList/index.html
+++ b/shoppinList/index.html
@@ -16,11 +16,13 @@
       <header class="header">ShoppingList</header>
       <!-- item 목록 -->
       <ul class="item-list"></ul>
-      <input type="text" class="text" placeholder=" Enter the product to add." />
-      <footer class="footer">
-        <button class="item-add">
-          <i class="fas fa-plus-square"></i>
-        </button>
+      <form class="add-item">
+        <input type="text" class="text" placeholder=" Enter the product to add." />
+        <footer class="footer">
+          <button class="item-add">
+            <i class="fas fa-plus-square"></i>
+          </button>
+      </form>
       </footer>
     </section>
   </body>
